--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3508",
+    "dev": "next dev -p 3509",
     "build": "next build",
     "start": "next start -p 3506",
     "lint": "next lint"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.5",
+    "@types/cheerio": "^0.22.35",
+    "@types/jsdom": "^21.1.7",
     "@vercel/analytics": "^1.5.0",
+    "cheerio": "^1.1.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.7.1",
     "gsap": "^3.12.7",
+    "jsdom": "^26.1.0",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "react": "^19.0.0",
@@ -30,6 +34,7 @@
     "eslint-config-next": "15.3.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
+    "tsx": "^4.20.4",
     "typescript": "^5"
   }
 }
